# build/swagger.json
@@ -9,7 +9,10 @@
 			"AuthFailureReason": {
 				"enum": [
 					"Wrong Password",
-					"Unknown Cause"
+					"Unknown Cause",
+					"No Refresh Token Found",
+					"Failed To Validate Token",
+					"Failed To Generate Access Token"
 				],
 				"type": "string"
 			},
@@ -29,14 +32,10 @@
 				"properties": {
 					"accessToken": {
 						"type": "string"
-					},
-					"refreshToken": {
-						"type": "string"
 					}
 				},
 				"required": [
-					"accessToken",
-					"refreshToken"
+					"accessToken"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -158,6 +157,25 @@
 						}
 					}
 				}
+			}
+		},
+		"/auth/refresh-access-token": {
+			"get": {
+				"operationId": "RefreshAccessToken",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPResponse_FailedAuthResponse.SuccessfulAuthResponse_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
